# Luminaire-Testing-and-Monocular-Depth-Distance

./: .dockerignore  .gitignore  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  Dockerfile.jetson  FILES_GUIDE.md  FINAL_TEST_REPORT.md  JETSON_DEPLOY_COMMANDS.md  JETSON_DOCKER_GUIDE.md  JETSON_OPTIMIZATION_SUMMARY.md  JETSON_QUICK_REFERENCE.md  LICENSE  MIGRATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PROJECT_COMPLETION_REPORT.md  QUICK_START_JETSON.md  README.md  TEST_GUIDE.md  TEST_REVIEW_SUMMARY.md  UV_GUIDE.md  api.py  calibration.py  cleanup.bat  cleanup.ps1  cleanup.sh  config.yaml  config_multi_lights.py  deploy_jetson.sh  deploy_prepare.ps1  docker-compose.jetson.yml  docker-compose.yml  download_owlv2_model.ps1  evaluate.py  gradio_app.py  gradio_app_jetson.py  gradio_app_optimized.py  pipeline.py  pipeline_owlv2.py  (+24 more)
utils/: __init__.py  helpers.py
